proj1/tests/error/invalid_identifier.py
future = 1
global = 2
